# implicit_shader

./: CMakeLists.txt  README.md
app/: main.cpp
cmake/: dawn.cmake  implicit_functions.cmake  webgpu.cmake  webgpucpp.cmake
include/implicit_shader/: Application.h  Duchon.h  implicit.h  primitives.h
shaders/: cables.wgsl  compute-shader.wgsl  cube.wgsl  duchon.wgsl  key.wgsl  line.wgsl  single_key.wgsl
shaders/cables/: cable_0.wgsl  cable_1.wgsl  cable_10.wgsl  cable_11.wgsl  cable_12.wgsl  cable_13.wgsl  cable_14.wgsl  cable_15.wgsl  cable_16.wgsl  cable_17.wgsl  cable_18.wgsl  cable_19.wgsl  cable_2.wgsl  cable_20.wgsl  cable_21.wgsl  cable_22.wgsl  cable_23.wgsl  cable_24.wgsl  cable_25.wgsl  cable_26.wgsl  cable_27.wgsl  cable_28.wgsl  cable_29.wgsl  cable_3.wgsl  cable_30.wgsl  cable_31.wgsl  cable_32.wgsl  cable_33.wgsl  cable_34.wgsl  cable_35.wgsl  cable_36.wgsl  cable_37.wgsl  cable_38.wgsl  cable_39.wgsl  cable_4.wgsl  cable_40.wgsl  cable_41.wgsl  cable_42.wgsl  cable_43.wgsl  cable_44.wgsl  (+11 more)
shaders/primitives/: capsule.wgsl  cone.wgsl  cylinder.wgsl  plane.wgsl  sphere.wgsl  torus.wgsl
src/: Application.cpp  Duchon.cpp  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  implicit.cpp  primitives.cpp
tests/: test_implicit_shader.cpp
